<resources>
    <string name="app_name">Masterfruits</string>
    <string name="framboise">framboise</string>
    <string name="fraise">fraise</string>
    <string name="citron">citron</string>
    <string name="orange">orange</string>
    <string name="banane">banane</string>
    <string name="raisin">raisin</string>
    <string name="prune">prune</string>
    <string name="kiwi">kiwi</string>
    <string name="clear">clear</string>
</resources>
